@@ -1,3 +1,6 @@
+-> Metronome moved from master out to headphones port
+-> Special clip keybindings,
+-> Captital keybindings for clear clip
 
 -AudioEditor shows green / red based on BPM analysis of the sample 
 -Clearing clips bug fixed
